<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_CL"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_user_profilepic_IV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:onClick="profileIVonClick"
        android:src="@drawable/profilepic"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_user_TL"
        style="@style/TextInputLayoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/username_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user_profilepic_IV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_username_ET"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:autofillHints=".AUTOFILL_HINT_USERNAME"
            android:inputType="text"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_email_TL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/email_hint"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user_TL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email_ET"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:inputType='textEmailAddress'
            android:textSize="14sp"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_firstname_TL"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:hint="@string/firstname_hint"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintEnd_toStartOf="@+id/register_lastname_TL"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_TL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_firstname_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/autofill_firstname"
            android:inputType='text'
            android:textSize="14sp"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_lastname_TL"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="68dp"
        android:gravity="center"
        android:hint="@string/lastname_hint"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_TL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_lastname_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/autofill_firstname"
            android:inputType='text'
            android:textSize="14sp"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_dob_TL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/dob_hint"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_firstname_TL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_dob_ET"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_dob_drawable"
            android:drawablePadding="3dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType='text'
            android:textSize="14sp"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password_TL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/password_hint"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_dob_TL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_ET"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/autofill_password"
            android:inputType='textPassword'
            android:textSize="14sp"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_reenter_TL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/reenter_password_hint"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_TL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_reenter_ET"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:inputType='textPassword'
            android:textSize="14sp"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/register_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_reenter_TL">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/register_male_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:text="@string/male_rb"
            android:buttonTint="@color/colorAccent"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/register_female_RB"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="116dp"
            android:text="@string/female_rb"
            android:buttonTint="@color/colorAccent"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="131dp"
        android:layout_height="58dp"
        android:onClick="registerButtonOnClick"
        android:text="@string/register_btn"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>