<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorBlack">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/user_bio_cardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_bio_title_tv"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:id="@+id/user_bio_bioTitleTV"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="@string/user_bio_exit_tv"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:id="@+id/user_bio_exitTV"
                android:layout_toStartOf="@id/user_bio_bioTitleTV"
                android:background="@drawable/exit_tv_bg"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/user_bio_bioTV"
        android:background="@color/colorDivider"
        android:textColor="@color/colorBlack"
        android:text="@string/user_bio_main_tv"
        android:padding="5dp"
        android:layout_below="@id/user_bio_cardView"/>

</RelativeLayout>